src/objects/Policy__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Policies</relationshipLabel>
        <relationshipName>Policies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Alert__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alert</label>
        <referenceTo>Alert__c</referenceTo>
        <relationshipLabel>Policies</relationshipLabel>
        <relationshipName>Policies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Policies</relationshipLabel>
        <relationshipName>Policies</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Policy</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Policy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>